# robcontrol

./: .gitignore  README.md  __init__.py  assess.py  data.py  lqr_datasets.py  model.py  pyproject.toml  utils.py
artifacts/: cartpole_dataset.npz  cartpole_dataset_metrics.json  cartpole_meta.json  cartpole_model.pt  mass_spring_damper_dataset.npz  mass_spring_damper_dataset_meta.json  mass_spring_damper_dataset_metrics.json  mass_spring_damper_dataset_model.pt
controllers/: __init__.py  base.py  cpc.py  h_infinity.py
examples/: __init__.py  assess.py  data.py  model.py
robcontrol/: __init__.py
robcontrol/controllers/: __init__.py  cpc.py  h_infinity.py
